[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygit-sync"
version = "1.1.0"
description = "Recursively sync git repositories under a directory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
authors = [
    {name = "Gianluca Garofalo"},
]
keywords = ["git", "sync", "repository", "automation", "cli"]
dependencies = [
    "GitPython>=3.1.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/gianluca-garofalo/pygit-sync"
Repository = "https://github.com/gianluca-garofalo/pygit-sync"
Issues = "https://github.com/gianluca-garofalo/pygit-sync/issues"
Changelog = "https://github.com/gianluca-garofalo/pygit-sync/blob/main/CHANGELOG.md"

[project.optional-dependencies]
toml = [
    "tomli>=2.0; python_version < '3.11'",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
pygit-sync = "pygit_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
